self registration prototype