@@ -75,6 +75,8 @@
         <configuration>
           <tomeeClassifier>microprofile</tomeeClassifier>
           <tomeeHttpPort>8181</tomeeHttpPort>
+          <tomeeAjpPort>0</tomeeAjpPort>
+          <tomeeShutdownPort>0</tomeeShutdownPort>
           <args>-Xmx512m -XX:PermSize=256m</args>
           <config>${project.basedir}/src/main/tomee/</config>
           <synchronization>
@@ -86,12 +88,20 @@
               <updateOnlyExtension>.jcss</updateOnlyExtension>
             </updateOnlyExtensions>
           </synchronization>
+          <libs>
+            <lib>org.tomitribe:tomitribe-http-signatures:1.3</lib>
+            <lib>org.tomitribe:churchkey:0.8</lib>
+            <lib>org.tomitribe:tomitribe-util:1.2.3</lib>
+          </libs>
         </configuration>
       </plugin>
       <plugin>
         <groupId>com.tomitribe.tribestream.maven</groupId>
         <artifactId>tribestream-maven-plugin</artifactId>
-        <version>1.6</version>
+        <version>1.7</version>
+        <configuration>
+          <version>1.7</version>
+        </configuration>
       </plugin>
     </plugins>
   </build>
@@ -125,7 +135,6 @@
       <version>8.0</version>
       <scope>provided</scope>
     </dependency>
-
     <dependency>
       <groupId>org.eclipse.microprofile.config</groupId>
       <artifactId>microprofile-config-api</artifactId>
@@ -139,6 +148,13 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.4</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
       <groupId>com.nimbusds</groupId>
       <artifactId>nimbus-jose-jwt</artifactId>
       <version>4.23</version>
@@ -148,55 +164,6 @@
       <artifactId>javafaker</artifactId>
       <version>0.15</version>
     </dependency>
-
-    <dependency>
-      <groupId>org.apache.tomee</groupId>
-      <artifactId>openejb-cxf-rs</artifactId>
-      <version>${tomee.version}</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.tomee</groupId>
-      <artifactId>openejb-core</artifactId>
-      <version>${tomee.version}</version>
-    </dependency>
-
-    <!--
-    The <scope>test</scope> guarantees that non of your runtime
-    code is dependent on any OpenEJB classes.
-    -->
-
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
-      <version>2.4</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.arquillian.junit</groupId>
-      <artifactId>arquillian-junit-container</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.shrinkwrap.resolver</groupId>
-      <artifactId>shrinkwrap-resolver-depchain</artifactId>
-      <type>pom</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.tomee</groupId>
-      <artifactId>ziplock</artifactId>
-      <version>${tomee.version}</version>
-      <scope>test</scope>
-    </dependency>
-
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>backbonejs</artifactId>
@@ -268,6 +235,67 @@
       <version>1.1.16</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.tomee</groupId>
+      <artifactId>openejb-cxf-rs</artifactId>
+      <version>${tomee.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tomee</groupId>
+      <artifactId>openejb-core</artifactId>
+      <version>${tomee.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.tomitribe</groupId>
+      <artifactId>tomitribe-http-signatures</artifactId>
+      <version>1.3</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.tomitribe</groupId>
+      <artifactId>churchkey</artifactId>
+      <version>0.8</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.johnzon</groupId>
+      <artifactId>johnzon-mapper</artifactId>
+      <version>1.1.4</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <!--
+    The <scope>test</scope> guarantees that non of your runtime
+    code is dependent on any OpenEJB classes.
+    -->
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.jboss.arquillian.junit</groupId>
+      <artifactId>arquillian-junit-container</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.shrinkwrap.resolver</groupId>
+      <artifactId>shrinkwrap-resolver-depchain</artifactId>
+      <type>pom</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tomee</groupId>
+      <artifactId>ziplock</artifactId>
+      <version>${tomee.version}</version>
+      <scope>test</scope>
+    </dependency>
+
     <!-- to make sure the dependency is downloaded for the tomee maven plugin -->
     <dependency>
       <groupId>org.apache.tomee</groupId>
@@ -323,6 +351,46 @@
           <scope>test</scope>
         </dependency>
       </dependencies>
+    </profile>
+    <profile>
+      <id>backup-node</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.tomee.maven</groupId>
+            <artifactId>tomee-maven-plugin</artifactId>
+            <version>${tomee.version}</version>
+            <configuration>
+              <tomeeClassifier>microprofile</tomeeClassifier>
+              <tomeeHttpPort>8182</tomeeHttpPort>
+              <args>-Xmx512m -XX:PermSize=256m</args>
+              <config>${project.basedir}/src/main/tomee/</config>
+              <catalinaBase>${project.build.directory}/apache-tomee-backup</catalinaBase>
+            </configuration>
+          </plugin>
+          <plugin>
+            <artifactId>maven-resources-plugin</artifactId>
+            <version>3.1.0</version>
+            <executions>
+              <execution>
+                <id>copy-resources</id>
+                <goals>
+                  <goal>copy-resources</goal>
+                </goals>
+                <configuration>
+                  <outputDirectory>${project.build.directory}/apache-tomee-backup/webapps/moviefun/webapps/</outputDirectory>
+                  <resources>
+                    <resource>
+                      <directory>src/main/tomee-backup</directory>
+                      <filtering>true</filtering>
+                    </resource>
+                  </resources>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 
